deploy/retrieveUnpackaged/objects/Econnection__c.object
<CustomObject>
    <description>Hand-off information for the opportunity from eConnect.</description>
    <fields>
        <fullName>cc_approval_code__c</fullName>
        <description>Denotes the approval code for the credit card charge.</description>
        <inlineHelpText>This is the approval code for the credit card charge.</inlineHelpText>
        <label>Approval Code (if Credit Card)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_charged__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Denotes the amount charged to the credit card.</description>
        <inlineHelpText>This is the amount charged to the credit card.</inlineHelpText>
        <label>Amount Charged (if Credit Card)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>currency_iso_code__c</fullName>
        <description>Denotes the currency for all amount fields.</description>
        <inlineHelpText>This is the currency for all of the amount fields on the eConnect object.</inlineHelpText>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YEN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>days_free__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Denotes the number of free days given.</description>
        <inlineHelpText>Were free days given?</inlineHelpText>
        <label>Days Free</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>exchange_pricing__c</fullName>
        <description>Denotes if there is standard exchange pricing.</description>
        <inlineHelpText>Is the Exchange pricing standard?</inlineHelpText>
        <label>Standard Exchange Pricing</label>
        <picklist>
            <picklistValues>
                <fullName>Not Selected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>high_profile_customer__c</fullName>
        <description>Denotes if the customer is high profile.</description>
        <inlineHelpText>Is the customer high profile?</inlineHelpText>
        <label>High Profile Customer</label>
        <picklist>
            <picklistValues>
                <fullName>Not Selected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>it_staff_available__c</fullName>
        <description>Denotes if the customer has IT staff available.</description>
        <inlineHelpText>Does the customer have IT staff available?</inlineHelpText>
        <label>Does Customer have IT Staff Available?</label>
        <picklist>
            <picklistValues>
                <fullName>Not Selected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>known_upgrades__c</fullName>
        <description>Denotes if there are any expected upgrades.</description>
        <inlineHelpText>Are there any expected upgrades?</inlineHelpText>
        <label>Upgrades are expected within …?</label>
        <picklist>
            <picklistValues>
                <fullName>Not Selected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>line_item_pricing_instructions__c</fullName>
        <description>Denotes line item pricing instructions.</description>
        <inlineHelpText>Enter the line item pricing instructions.</inlineHelpText>
        <label>Line Item Pricing Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>msa_changes__c</fullName>
        <description>Denotes the MSA changes.</description>
        <inlineHelpText>Enter the MSA changes.</inlineHelpText>
        <label>MSA Changes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>myupdate_datetime__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>myupdate_datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>opportunity__c</fullName>
        <description>Denotes the opportunity the data is related to.</description>
        <inlineHelpText>This is the opportunity that the record is related to.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>eConnect Hand-Off Records</relationshipLabel>
        <relationshipName>R00N50000001nYlhEAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>potential_growth__c</fullName>
        <description>Denotes if the customer has potential growth.</description>
        <inlineHelpText>Does the customer have potential growth?</inlineHelpText>
        <label>Growth Potential</label>
        <picklist>
            <picklistValues>
                <fullName>Not Selected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>prepay_value__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Denotes the amount that is prepaid.</description>
        <inlineHelpText>This is the amount that is prepaid.</inlineHelpText>
        <label>Amount Prepaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>primary_contact_desc__c</fullName>
        <description>Denotes if the primary contact is technical or business.</description>
        <inlineHelpText>Select the best description for the primary contact.</inlineHelpText>
        <label>Primary Contact Description</label>
        <picklist>
            <picklistValues>
                <fullName>Not Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both Technical and Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>primary_contact_legal__c</fullName>
        <description>Denotes if the primary contact is a legal contact.</description>
        <inlineHelpText>Is the primary contact a legal contact?</inlineHelpText>
        <label>Is the Primary Contact a Legal Rep?</label>
        <picklist>
            <picklistValues>
                <fullName>Not Selected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>primary_contact_relationship__c</fullName>
        <description>Describe the Relationship between Signer, Decision Maker, and Primary Contact. (e.g. &quot;Same person&quot;; &quot;Chief Counsel, CTO, CEO respectively&quot;; etc.)</description>
        <inlineHelpText>Describe the Relationship between Signer, Decision Maker, and Primary Contact. (e.g. &quot;Same person&quot;; &quot;Chief Counsel, CTO, CEO respectively&quot;; etc.)</inlineHelpText>
        <label>Signer/Decision Maker/Primary Contact</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sla_changes__c</fullName>
        <description>Dentoes the SLA changes.</description>
        <inlineHelpText>Enter the SLA changes for this opportunity.</inlineHelpText>
        <label>SLA Changes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>special_billing_pricing_instructions__c</fullName>
        <description>Denotes any special billing or pricing instructions.</description>
        <inlineHelpText>Enter the special billing and/or special pricing instructions.</inlineHelpText>
        <label>Special Billing / Pricing Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>special_build_core__c</fullName>
        <description>Denotes if there are special build instructions in CORE.</description>
        <inlineHelpText>Is there special build instructions in CORE?</inlineHelpText>
        <label>Are Special Build Instructions in CORE?</label>
        <picklist>
            <picklistValues>
                <fullName>Not Selected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>special_build_instructions__c</fullName>
        <description>Denotes the special build instructions.</description>
        <inlineHelpText>Enter the special build instructions.</inlineHelpText>
        <label>Special Build Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ssl__c</fullName>
        <description>Denotes if a SSL Certification was sold.</description>
        <inlineHelpText>Does the sale include a SSL Certificate?</inlineHelpText>
        <label>Sale Includes a SSL Cert?</label>
        <picklist>
            <picklistValues>
                <fullName>Not Selected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>eConnect Hand-Off Record</label>
    <nameField>
        <label>eConnect Hand-Off Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>eConnect Hand-Off Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>